# dysonsphere

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dysonsphere.toml  gallery.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
dkkung_altair_theme/: dkkung_altair_theme.py
docs/: index.html
dysonsphere/: __init__.py  _placement.py  annotations.py  config.py  discovery.py  export.py  ext.py  inference.py  labels.py  layers.py  marks.py  metadata.py  multilabel.py  nonlinear.py  palettes.py  statistics.py  table.py  theme.py  transforms.py  utils.py
dysonsphere-biology/: README.md  pyproject.toml
dysonsphere-biology/dysonsphere_biology/: __init__.py  volcano.py  western_blot.py
dysonsphere-biology/examples/: volcano_example.py
dysonsphere-biology/tests/: conftest.py  test_volcano.py  test_western_blot.py
gallery/: gallery.html  histogram.py
scripts/: build_gallery.py  import_dysonsphere_palettes_to_illustrator.jsx  import_palettes_to_illustrator.jsx
scripts/illustrator/: dysonsphere.ase  import_dysonsphere_palettes_to_illustrator.jsx
scripts/plot/: area_chart.py  area_chart_gradient.py  boxplot.py  bubble.py  heatmap.py  histogram.py  line.py  p-value.py  paired.py  palette_test.py  ridgeplot.py  scatter.py  sequences.py  stacked_bar_chart.py  strip.py  violin.py  volcano.py
scripts/plots/: area_chart_gradient.py  beeswarm.py  beeswarm_panels.py  boxplot.py  double-x.py  double-y.py  errorband.py  errorbar.py  histogram.py  html_export.py  inward_ticks.py  labels.py  line.py  logarithmic.py  p-value.py  palette_test.py  point_labels.py  stacked_bar_chart.py  strip.py  strip_manual.py  text.py  violin.py
tests/: conftest.py  test_annotations.py  test_export.py  test_ext.py  test_extensions.py  test_labels.py  test_layers.py  test_marks.py  test_metadata.py  test_multilabel.py  test_nonlinear.py  test_package.py  test_palettes.py  test_placement.py  test_statistics.py  test_table.py  test_theme.py  test_transforms.py  test_utils.py
theme/: helpers.py  layers.py  palettes.py  theme.py
website/: CLAUDE.md  astro.config.mjs  package-lock.json  package.json
website/examples/: alphafold_casp.py  arrhenius.py  attractor.py  bar.py  beeswarm.py  benford_law.py  bifurcation.py  boxplot.py  celltype_donut.py  closed_frame.py  comparisons.py  comparisons_asterisks.py  comparisons_grouped_reference.py  comparisons_kruskal.py  comparisons_notation.py  comparisons_pairwise.py  comparisons_perpair.py  comparisons_reference.py  comparisons_value.py  condensate.py  confusion_matrix.py  corner_radius.py  correlation.py  correlation_both.py  correlation_ci.py  correlation_groups.py  correlation_matrix.py  correlation_spearman.py  cosmic_web.py  darkmode_dark.py  darkmode_light.py  decision_surface.py  diffraction.py  dose_response.py  ecdf.py  expression_comparison.py  expression_heatmap.py  first_chart.py  grain_map.py  grid_lines.py  (+84 more)
website/legacy-readme/: NOTE.md
website/logo/: gen_dysonsphere_logo.py
website/public/: playground.html
website/public/charts/: alphafold_casp-dark.json  alphafold_casp-light.json  arrhenius-dark.json  arrhenius-light.json  attractor-dark.json  attractor-light.json  bar-dark.json  bar-light.json  bar.json  beeswarm-dark.json  beeswarm-light.json  benford_law-dark.json  benford_law-light.json  bifurcation-dark.json  bifurcation-light.json  boxplot-dark.json  boxplot-light.json  celltype_donut-dark.json  celltype_donut-light.json  closed_frame-dark.json  closed_frame-light.json  comparisons-dark.json  comparisons-light.json  comparisons.json  comparisons_asterisks-dark.json  comparisons_asterisks-light.json  comparisons_grouped_reference-dark.json  comparisons_grouped_reference-light.json  comparisons_kruskal-dark.json  comparisons_kruskal-light.json  comparisons_notation-dark.json  comparisons_notation-light.json  (+221 more)
website/scripts/: gen_api.py  gen_config.py  gen_examples.py  gen_palettes.py
(+69 files in other folders)
