[project]
name = "dysonsphere"
version = "3.4.3"
description = "An Altair theme and chart utility library for publication-ready scientific figures."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dkkung", email = "128324842+dkkung@users.noreply.github.com" }]
keywords = ["altair", "vega-lite", "visualization", "data visualization", "colormap", "palette", "theme"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=1.26.0",
    "polars[pyarrow]>=1.19.0",
    "scipy>=1.11.0",
    "vl-convert-python>=1.7.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.0.0",
    "ipython>=8.0.0",
    "pandas>=2.0.0",
    "pytest>=9.0.0",
    "ruff>=0.15.17",
    "ty>=0.0.0",
    # In-repo extension, installed editable to dogfood the extension surface end-to-end
    # (entry-point discovery -> ds.biology.volcano). Dev-only; not a runtime dep of core.
    "dysonsphere-biology",
]

# uv workspace: dysonsphere-biology is a sibling package in this repo. It depends on the local
# editable `dysonsphere` (workspace = true in its pyproject), splittable to its own repo later.
[tool.uv.workspace]
members = ["dysonsphere-biology"]

[tool.uv.sources]
dysonsphere-biology = { workspace = true }

[project.urls]
Repository = "https://github.com/dkkung/dysonsphere"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dysonsphere"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# __init__ re-exports via star imports; its explicit __all__ names are bound by them (F405).
"dysonsphere/__init__.py" = ["F405"]

[tool.ruff.format]
quote-style = "double"
