[project]
name = "dysonsphere-biology"
version = "0.1.0"
description = "Biology chart extensions for dysonsphere (volcano plots, and more to come)."
readme = "README.md"
license = "MIT"
authors = [{ name = "dkkung", email = "128324842+dkkung@users.noreply.github.com" }]
keywords = ["altair", "vega-lite", "bioinformatics", "volcano plot", "differential expression"]
requires-python = ">=3.11"
dependencies = [
    # Upper bound: extensions version independently of core, and this extension is written
    # against core's v3 public surface (ds.ext / discovery). A future core v4 may break it,
    # so cap at <4 - a v4 install then fails the resolver loudly instead of breaking silently.
    "dysonsphere>=3.0.0,<4",
    "altair>=5.5.0",
    "polars[pyarrow]>=1.19.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",  # western_blot() reads blot images (dimensions + embed)
]

# Registering here is what makes `dysonsphere.biology` resolve (core's package __getattr__ /
# ds.extensions() discover this group). The value is the extension's importable top-level module.
[project.entry-points."dysonsphere.extensions"]
biology = "dysonsphere_biology"

[tool.uv.sources]
dysonsphere = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dysonsphere_biology"]
